logs/pipe2py.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pipe2py'...
Compiling './lib/python3.5/site-packages/pipe2py/compile.py'...
***   File "./lib/python3.5/site-packages/pipe2py/compile.py", line 176
    exec pypipe   #Note: evaluated in current namespace - todo ok?
              ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/pipe2py/modules'...
Compiling './lib/python3.5/site-packages/pipe2py/modules/autorss.py'...
***   File "./lib/python3.5/site-packages/pipe2py/modules/autorss.py", line 61
    print getRSSLink(sys.argv[1])
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pipe2py/modules/feedparser.py'...
***   File "./lib/python3.5/site-packages/pipe2py/modules/feedparser.py", line 236
    raise AttributeError, "object has no attribute '%s'" % key
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pipe2py/modules/pipecsv.py'...
***   File "./lib/python3.5/site-packages/pipe2py/modules/pipecsv.py", line 77
    print "pipe_csv loading:", url
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pipe2py/modules/pipefeedautodiscovery.py'...
***   File "./lib/python3.5/site-packages/pipe2py/modules/pipefeedautodiscovery.py", line 31
    print "pipe_feedautodiscovery loading:", url
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pipe2py/modules/pipefetch.py'...
***   File "./lib/python3.5/site-packages/pipe2py/modules/pipefetch.py", line 33
    print "pipe_fetch loading:", url
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pipe2py/modules/pipefetchdata.py'...
***   File "./lib/python3.5/site-packages/pipe2py/modules/pipefetchdata.py", line 46
    print "pipe_fetchdata loading xml:", url
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pipe2py/modules/pipefetchpage.py'...
***   File "./lib/python3.5/site-packages/pipe2py/modules/pipefetchpage.py", line 37
    print "FetchPage: Preparing to download:",url
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pipe2py/modules/pipefetchsitefeed.py'...
***   File "./lib/python3.5/site-packages/pipe2py/modules/pipefetchsitefeed.py", line 39
    print "pipe_fetchsitefeed loading:", url
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pipe2py/modules/pipeloop.py'...
***   File "./lib/python3.5/site-packages/pipe2py/modules/pipeloop.py", line 72
    print "Submodule gave HTTPError - continuing the loop"
                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pipe2py/modules/pipestrconcat.py'...
***   File "./lib/python3.5/site-packages/pipe2py/modules/pipestrconcat.py", line 30
    print "pipe_strconcat: TypeError"
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pipe2py/modules/pipeyql.py'...
***   File "./lib/python3.5/site-packages/pipe2py/modules/pipeyql.py", line 40
    print "pipe_yql loading xml:", yql
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pipe2py/topsort.py'...
***   File "./lib/python3.5/site-packages/pipe2py/topsort.py", line 95
    print robust_topological_sort({
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pipe2py-0.9.4.egg-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
